--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,7 @@ jobs:
       - name: Build Mac
         if: matrix.os == 'macos-latest'
         run: |
+          export CSC_IDENTITY_AUTO_DISCOVERY=false
           yarn build:npm mac
           yarn build:mac
         env:
@@ -88,7 +89,9 @@ jobs:
 
       - name: Build Windows
         if: matrix.os == 'windows-latest'
-        run: yarn build:win
+        run: 
+          export CSC_IDENTITY_AUTO_DISCOVERY=false
+          yarn build:win
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RENDERER_VITE_AIHUBMIX_SECRET: ${{ vars.RENDERER_VITE_AIHUBMIX_SECRET }}
